<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@drawable/bg_jpb"
    android:layout_height="fill_parent" xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activity.RegisterCompanyActivity"
    android:fillViewport="true">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_panel"
        android:padding="10dip"
        android:layout_centerVertical="true">

        <EditText android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtCName"
            android:hint="@string/c_name"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="20dip"
            android:singleLine="true"/>

        <EditText android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtLogin"
            android:hint="@string/login"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="20dip"
            android:singleLine="true"/>


        <EditText android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtPassword"
            android:hint="@string/password"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="20dip"
            android:singleLine="true"
            android:inputType="textPassword"/>


        <EditText android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtTel"
            android:hint="@string/tel"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="20dip"
            android:inputType="number"/>



        <Button android:id="@+id/btnSaveCompany"
            android:layout_width="fill_parent"
            android:onClick="saveCompany"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="Save"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/progressBar"/>
    </LinearLayout>
</LinearLayout>